# not-yet-another-id-code

./: .gitmodules  README.md
smartcard/: README.md
smartcard/applet/: README.md  build.gradle
smartcard/applet/src/main/java/bench/: BenchApplet.java  SecP256r1.java
smartcard/applet/src/main/java/protocol/: Base_Helper.java  Bignat.java  Bignat_Helper.java  Integer.java  ObjectAllocator.java  OperationSupport.java  P512r1.java  PM.java  ProtocolApplet.java  ResourceManager.java  ReturnCodes.java  SecP256r1.java
smartcard/python/: benchmark_blocklist.py  benchmark_tags.py  benchmark_transfer.py  prototype.py  requirements.txt
smartphone/: README.md
smartphone/benches/: benchmark.rs
smartphone/benchmark/: Cargo.toml  README.md
smartphone/benchmark/benches/: benchmark.rs
smartphone/benchmark/src/: pedersen.rs  pointcheval_sanders.rs
smartphone/prototype/: build-dependencies.sh  local.properties  settings.gradle
smartphone/prototype/app/: build.gradle
smartphone/prototype/app/rcads_crypto/: Cargo.toml  build.rs
smartphone/prototype/app/rcads_crypto/src/: lib.rs
smartphone/prototype/app/rcads_crypto/src/protos/: mod.rs  protocol.proto
smartphone/prototype/app/src/main/: AndroidManifest.xml
smartphone/prototype/app/src/main/res/layout/: activity_issuer.xml  activity_main.xml  activity_main2.xml  activity_recipient_protocol.xml  activity_station_protocol.xml
smartphone/prototype/app/src/main/res/values-night/: themes.xml
smartphone/prototype/gradle/wrapper/: gradle-wrapper.properties
smartphone/src/: lib.rs  smartphone.rs  utils.rs
(+18 files in other folders)
