[package]
name = "rcads_crypto"
version = "0.1.0"
edition = "2021"


[lib]
name = "rcads_crypto"
crate-type = ["cdylib"]

[dependencies]
jni = "0.19.0"
subtle = "2.4"
mcl_rust = { git="https://github.com/spring-epfl/mcl-rust", version= "*" }
sha2 = { version = "0.10.2", default-features = false }
protobuf = "3.0.0-alpha.8"

[build-dependencies]
protobuf-codegen = "3.0.1"